--- a/style.css
+++ b/style.css
@@ -21,14 +21,14 @@
     rgba(0, 0, 0, 1),
     rgba(0, 0, 0, 1)
   );
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000000;
   padding-top: 19rem;
 }
 .container__peliculas {
   margin: 1rem 0 0 0.5rem;
 }
 .container__peliculas__title {
-  color: white;
+  color: #ffffff;
   font-family: "Trebuchet MS", sans-serif;
   font-size: 1rem;
   margin-left: 1.5rem;
@@ -37,12 +37,11 @@
 .container__peliculas__cards-wrapper {
   display: flex;
   justify-content: space-around;
-  margin: 1rem 0.5rem;
+  margin: 0.5rem 0.5rem 1.5rem 0.5rem;
 }
 .card {
+  border: 1px solid #353535;
   border-radius: 6px;
-  box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1),
-    inset 0 0 0 1px rgba(255, 255, 255, 0.2);
   width: 8rem;
 }
 
